@@ -17,6 +17,8 @@ checkbox (0.16.4) saucy; urgency=low
 
   [ Daniel Manrique ]
   * jobs/stress.txt.in: fixed a few inconsistent invocations of sleep_test.
+  * checkbox/tests/test_message_files.py: Added a test to verify jobs contain
+    required fields (LP: #1187216).
 
  -- Brendan Donegan <brendan.donegan@canonical.com>  Fri, 31 May 2013 16:04:42 +0100
 
